# areyouona-date

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  get_requirements.py  main.py  oss.env  pyproject.toml  run-gunicorn.sh
geolocation/: geo.php  index.html
src/: extensions.py  main.py
src/blueprint/: blueprint.py
src/core/: assessment.py  score.py  stats.py  yelp.py
src/static/: humans.txt
src/static/css/: style.css
src/static/js/: script.js
src/templates/: _hero-button.html  _social.html  analytics.html  base.html  error.html  index.html  maybe.html  no.html  permission.html  privacy.html  yes.html
src/templates/forms/: form-permission.html
